all file update

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -43,3 +43,19 @@
     border: none;
     color:  #49557e;
 }
+@media (max-width:1050px) {
+   
+    .header-contents{
+        max-width: 45%;
+    }
+}
+@media (max-width:750px) {
+
+    .header-contents{
+        max-width: 65%;
+    }
+    .header-contents p{
+        display: none;
+    }
+    
+}
