--- a/src/components/ExploreMenu/ExploreMenu.css
+++ b/src/components/ExploreMenu/ExploreMenu.css
@@ -53,3 +53,9 @@
     border: 4px solid tomato;
     padding: 2px;
 }
+@media (max-width:1050px){
+    .explore-menu p{
+        max-width: 100%;
+        font-size: 14px;
+    }
+}
